--- a/dprojx/templates/dappx/add_anketa.html
+++ b/dprojx/templates/dappx/add_anketa.html
@@ -12,7 +12,7 @@
         <div class = '{{qu.id}}'>
         <ul id = {{qu.id}}> {{qu.question_name }} </ul>
         {% if qu.question_type == "Date" %}
-           <input type="date" name="question{{qu.id}}_date" value=""> 
+           <input type="date" name="question{{qu.id}}_date" value="2019-01-31">
         {% else %}
 
             <select name ="question{{qu.id}}">        
