--- a/dprojx/templates/dappx/doctor.html
+++ b/dprojx/templates/dappx/doctor.html
@@ -1,14 +1,27 @@
 {% extends "dappx/index.html" %}
 {% block body_block %}
 
-<div class="container">
-  <div class="jumbotron">
     
     
         <h1>Вы вошли как врач!</h1>        
-        <input type="button" value="Добавить анкету" class="button_active" onclick="location.href='{% url 'dappx:addprofile' %}';" />        
-    
-  </div>
-</div>
+        <input type="button" value="Добавить анкету" class="button_active" onclick="location.href='{% url 'dappx:addprofile' %}';" /> 
+       
+        <table border="1" width="70%">
+        	<tr>
+        	{% for k in dic.1 %}
+        		<th>{{k}}</th>
+        	{% endfor %}
+        	</tr>
+        	{% for k,v in dic.items %}
+        		<tr>
+        			{% for q,ans in v.items %}        			
+        				<td> {{ans}}</td>
+        			{% endfor %}
+        		</tr>     				
+        		   		
+      		{% endfor %}
+       
+        </table>		
+
 
 {% endblock %}
