--- a/dprojx/templates/dappx/base.html
+++ b/dprojx/templates/dappx/base.html
@@ -20,7 +20,7 @@
           {% else %}
             <li><a class="navbar-link" href="{% url 'dappx:user_login' %}">Login</a></li>
           {% endif %}
-          <li><a class="navbar-link" href="{% url 'dappx:resercher_doctor' %}">Resercher or doctor</a></li>
+          <li><a class="navbar-link" href="{% url 'dappx:resercher_doctor' %}">Researcher or doctor</a></li>
 </ul>
       </div>
     </nav>
